testing radio button position

--- a/src/studentform.html
+++ b/src/studentform.html
@@ -137,7 +137,7 @@
 
                   <input class="form-check-input gtainput" type="radio" required id="no" name="GTA" value="1"
                     onclick="updateGTA(this.value)">
-                  <label class="form-check-label me-4" for="no">No</label>
+                  <label class="form-check-label me-4" for="no">No</label> <br>
 
                   <input class="form-check-input gtainput" type="radio" required id="nolab" name="GTA" value="3"
                     onclick="updateGTA(this.value)">
