media screen admin page

--- a/src/admin.html
+++ b/src/admin.html
@@ -21,20 +21,21 @@
 <body>
     <div class="page-logo">
         <img src="assets/umkc-logo1.png" class="img-login img-fluid" width="400px">
-        <h2 class="m-5 mt-2 mb-3">Open Positions:</h2>
+        <h2 class=" mt-2 mb-3 title-position">Open Positions</h2>
     </div>
 
-    <div class="text-center sticky-right">
-        <div class="input-group me-5 mb-3 float-end sticky-right">
+    <div class="text-center admin-items">
+        <div class="input-group search-bar">
             <input type="text" id="Search" onkeyup="Search()" class="form-control" placeholder="Search Class"
                 aria-label="Search Position" aria-describedby="search-addon" />
             <span class="btn btn-primary" id="advanced-search-button" type="button">
                 <i class="fa fa-search"></i>
             </span>
         </div>
-        <div>
+    
+        <div class="add-button">
             <a id="newbutton" href="createposition.html?new" target="_blank" value=""
-                class="open-position-btn2 btn btn-primary float-end">Add Position</a>
+                class="open-position-btn2 btn btn-primary admin-items mb-4">Add Position</a>
         </div>
     </div>
 
