--- a/src/index.html
+++ b/src/index.html
@@ -1,78 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--Link added for bootstrap-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="style/css.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script type="module" src="script/login/login.js"></script>
-  <link rel="icon" href="assets/umkc-logo.png">
-  <title>Login</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Link added for bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style/css.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="script/admin/adminfilter.js"></script>
+    <script src="script/admin/adminwrite.js"></script>
+    <script type="module" src="script/welcome/welcomedatabase.js"></script>
+    <link rel="icon" href="assets/umkc-logo.png">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Welcome</title>
 </head>
 
 <body>
-    <div class="login-container">
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-                <div class="card my-5">
-                    <form id="login" class="card-body cardbody-color p-lg-5 needs-validation" novalidate accept-charset="UTF-8" enctype="multipart/form-data" method="GET" onsubmit="">
-                        <h2 class="text-center mt-4">GTA Application Portal</h2>
-                        
-                        <div class="text-center">
-                            <img src="assets/umkc-logo.png" class="img-login img-fluid profile-image-pic img-thumbnail my-3" width="200px">
-                        </div>
+    <div class="header">
+        <img src="assets/umkc-logo2.png" class="img-header" width="180px">
+        <h3 class="header-title">Science and Engineering</h3>
+    </div>
+    <div class="divider"></div>
+    <div class="container-title">
+        <h2 class="page-title">Open Positions</h2>
+        <div class="input-group search-bar">
+            <input type="text" id="Search" onkeyup="Search()" class="form-control search-input" placeholder="Search Class"
+                aria-label="Search Position" aria-describedby="search-addon" />
+            <span class="btn search-btn float-end" id="advanced-search-button" type="button">
+                <i class="fa fa-search"></i>
+            </span>
+        </div>
+    </div>
 
-                        <div class="input-group mb-3 login-input">
-                            <span class="input-group-text"><i class="bi bi-envelope"></i></span>
-                            <input type="text" class="form-control rounded-end" id="email" placeholder="UMKC email or username" required>
-                            <div class="invalid-feedback">
-                                Please enter your UMKC email or username.
-                            </div>
-                        </div>
 
-                        <div class="input-group mb-3 login-input has-validation">
-                            <span class="input-group-text"><i class="bi bi-lock"></i></span>
-                            <input type="password" class="form-control" id="password" placeholder="Password" pattern="^().{6,24}$" required>
-                            <div class="invalid-feedback">
-                                Please enter your password for UMKC account.
-                            </div>
-                        </div>
- 
-                        <div class="error" id="loginerror"></div>
-                        
-                        <div class="text-center mt-3">
-                            <input type="submit" value="Login" class="btn btn-primary px-5 mb-5">
-                        </div>
-                    </form>
+    <div class="text-center sticky-right">
+        <div>
+            <a href="login.html" target="_blank" id="newbutton" value=""
+                class="open-position-btn2 btn btn-primary float-end">Apply</a>
+        </div>
+    </div>
+
+    <div class="mb-3 p-3 card filter card-filter sticky-left">
+        <h5>Filter by <i class="bi bi-funnel"></i></h5>
+        <label>Major:</label>
+        <div class="form-check" id="test">
+            <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="CS"
+                    value="CS" onchange="changeCheckbox(this)" />CS</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="IT"
+                    value="IT" onchange="changeCheckbox(this)" />IT</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="ECE"
+                    value="ECE" onchange="changeCheckbox(this)" />ECE</label><br>
+        </div>
+        <label class="mt-2">Position:</label>
+        <div class="form-check">
+            <label class="checkbox form-check-label"><input class="form-check-input position" type="checkbox"
+                    id="Grader" value="Grader" onchange="changeCheckbox(this)" />Grader</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input position" type="checkbox"
+                    id="Instructor" value="Instructor" onchange="changeCheckbox(this)" />Instructor</label><br>
+        </div>
+        <label class="mt-2">Semester:</label>
+        <div class="form-check">
+            <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox" id="Fall"
+                    value="Fall" onchange="changeCheckbox(this)" />Fall</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox"
+                    id="Spring" value="Spring" onchange="changeCheckbox(this)" />Spring</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox"
+                    id="Summer" value="Summer" onchange="changeCheckbox(this)" />Summer</label><br>
+        </div>
+        <label class="mt-2">Level:</label>
+        <div class="form-check">
+            <label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox" id="grad"
+                    value="grad" onchange="changeCheckbox(this)" />Graduate</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox"
+                    id="undergrad" value="undergrad" onchange="changeCheckbox(this)" />Undergraduate </label><br>
+        </div>
+    </div>
+
+    <div class="open-position-container" id="open-position-container">
+        <div class="card mb-3 target" id="card">
+            <h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5>
+            <div class="card-body">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
                 </div>
+                <br>
             </div>
         </div>
     </div>
- <!--Script added for bootstrap-->
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
- <script>
-    // Example starter JavaScript for disabling form submissions if there are invalid fields
-(function () {
-  'use strict'
-  var html='';
-
-  var forms = document.querySelectorAll('.needs-validation')
-
-  Array.prototype.slice.call(forms).forEach(function (form) {
-      form.addEventListener('submit', function (event) {
-        if (!form.checkValidity()) {
-          event.preventDefault()
-          event.stopPropagation()
-        }
-        form.classList.add('was-validated');  }, false)
-    })
-})()
-
- </script>
+    <!--Script added for bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous">
+    </script>
 </body>
 </html>
-
