--- a/src/studentform.html
+++ b/src/studentform.html
@@ -239,7 +239,7 @@
                     Your form was successfully submitted!
                   </div>
                   <div class="modal-footer">
-                    <a href="index.html" class="btn btn-primary ">Close</i></a>
+                    <a href="login.html" class="btn btn-primary ">Close</i></a>
                   </div>
                 </div>
               </div>
