update apply link

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <div class="container-title sticky-top">
         <h2 class="page-title">Open Positions</h2>
         <div>
-            <a href="index.html" target="_blank" id="newbutton" value=""
+            <a href="login.html" target="_blank" id="newbutton" value=""
                 class="btn-apply btn btn-primary float-end">APPLY</a>
         </div>
         <div class="input-group search-bar">
