--- a/src/index.html
+++ b/src/index.html
@@ -77,8 +77,8 @@
 
     <div class="open-position-container" id="open-position-container">
         <div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-parent="#accordion" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
+            <a id="title" data-bs-toggle="collapse" data-bs-parent="#accordion" data-bs-target=".collapse"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
                 <label class="card-title float-start">Notes: </label>
                 <div class="notes-wrapper ">
@@ -87,6 +87,17 @@
                 <br>
             </div>
         </div>
+		<!--<div class="card mb-3 target" id="card">
+            <a id="title" data-bs-toggle="collapse" data-bs-parent="#accordion" data-bs-target=".collapse"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
+            </div>
+        </div>-->
     </div>
 
     <!--Script added for bootstrap-->
