--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,12 @@
             <label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox"
                     id="undergrad" value="undergrad" onchange="changeCheckbox(this)" />Undergraduate </label><br>
         </div>
+		<div class="mt-3 form-check">
+            <label class="checkbox form-check-label"><input class="form-check-input hasapplicants" type="radio"
+                     name="collapse" onchange="$('.collapse').collapse('show')"/>Show</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input hasapplicants" type="radio"
+                    name="collapse" onchange="$('.collapse').collapse('hide')" checked />Collapse</label><br>
+        </div>
     </div>
 
     <div class="open-position-container" id="open-position-container">
