--- a/src/admin.html
+++ b/src/admin.html
@@ -80,12 +80,12 @@
             <label class="checkbox form-check-label"><input class="form-check-input hasapplicants" type="checkbox"
                     id="noapplicants" value="noapplicants" onchange="changeCheckbox(this)" />No Applicants </label><br>
         </div>
-		<div class="mt-3 form-check">
+		<!--<div class="mt-3 form-check">
             <label class="checkbox form-check-label"><input class="form-check-input hasapplicants" type="radio"
                      name="collapse" onchange="$('.collapse').collapse('show')" checked />Show</label><br>
             <label class="checkbox form-check-label"><input class="form-check-input hasapplicants" type="radio"
                     name="collapse" onchange="$('.collapse').collapse('hide')"/>Collapse</label><br>
-        </div>
+        </div>-->
     </div>
 
     <div class="open-position-container" id="open-position-container">
