--- a/src/index.html
+++ b/src/index.html
@@ -73,17 +73,17 @@
             <label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox"
                     id="undergrad" value="undergrad" onchange="changeCheckbox(this)" />Undergraduate </label><br>
         </div>
-		<div class="mt-3 form-check">
+		<!--<div class="mt-3 form-check">
             <label class="checkbox form-check-label"><input class="form-check-input hasapplicants" type="radio"
                      name="collapse" onchange="$('.collapse').collapse('show')"/>Show</label><br>
             <label class="checkbox form-check-label"><input class="form-check-input hasapplicants" type="radio"
                     name="collapse" onchange="$('.collapse').collapse('hide')" checked />Collapse</label><br>
-        </div>
+        </div>-->
     </div>
 
     <div class="open-position-container" id="open-position-container">
         <div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-parent="#accordion" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
             <div class="card-body collapse" id="collapseOne">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
                 <label class="card-title float-start">Notes: </label>
