--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,22 @@
     </div>
 
     <div class="open-position-container" id="open-position-container">
-        <div class="card mb-3 target" id="card">
+<div class="row">
+	  <div class="col-sm-3">
+		<div class="card mb-3 target" id="card">
+            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse" id="collapseOne">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
+            </div>
+		</div>
+		</div>
+	  <!--<div class="col-sm-3" id="card">
+		<div class="card mb-3 target">
             <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
             <div class="card-body collapse" id="collapseOne">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
@@ -93,6 +108,138 @@
                 <br>
             </div>
         </div>
+		</div>
+		<div class="col-sm-3">
+		<div class="card mb-3 target" id="card">
+            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse" id="collapseOne">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
+            </div>
+        </div>
+		</div>
+<div class="col-sm-3">
+		<div class="card mb-3 target" id="card">
+            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse" id="collapseOne">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
+            </div>
+		</div>
+		</div>
+	  <div class="col-sm-3">
+		<div class="card mb-3 target" id="card">
+            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse" id="collapseOne">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
+            </div>
+        </div>
+		</div>
+		<div class="col-sm-3">
+		<div class="card mb-3 target" id="card">
+            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse" id="collapseOne">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
+            </div>
+        </div>
+		</div>
+	  <div class="col-sm-3">
+		<div class="card mb-3 target" id="card">
+            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse" id="collapseOne">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
+            </div>
+		</div>
+		</div>
+	  <div class="col-sm-3">
+		<div class="card mb-3 target" id="card">
+            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse" id="collapseOne">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
+            </div>
+        </div>
+		</div>
+		<div class="col-sm-3">
+		<div class="card mb-3 target" id="card">
+            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse" id="collapseOne">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
+            </div>
+        </div>
+		</div>
+<div class="col-sm-3">
+		<div class="card mb-3 target" id="card">
+            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse" id="collapseOne">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
+            </div>
+		</div>
+		</div>
+	  <div class="col-sm-3">
+		<div class="card mb-3 target" id="card">
+            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse" id="collapseOne">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
+            </div>
+        </div>
+		</div>
+		<div class="col-sm-3">
+		<div class="card mb-3 target" id="card">
+            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse" id="collapseOne">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
+            </div>
+        </div>
+		</div>-->
+		</div>
     </div>
 
     <!--Script added for bootstrap-->
