--- a/src/index.html
+++ b/src/index.html
@@ -81,8 +81,8 @@
         </div>
     </div>
 
-    <div class="open-position-container" id="open-position-container">
-<div class="row">
+    <div class="open-position-container" >
+<div class="row" id="open-position-container">
 	  <div class="col-sm-3">
 		<div class="card mb-3 target" id="card">
             <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
