--- a/src/index.html
+++ b/src/index.html
@@ -81,86 +81,7 @@
         </div>
     </div>
 
-    <div class="open-position-container" >
-<div class="row" id="open-position-container">
-	  <div class="col-sm-3">
-		<div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper ">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-		</div>
-		</div>
-	  <!--<div class="col-sm-3" id="card">
-		<div class="card mb-3 target">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper ">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-        </div>
-		</div>
-		<div class="col-sm-3">
-		<div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper ">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-        </div>
-		</div>
-<div class="col-sm-3">
-		<div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper ">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-		</div>
-		</div>
-	  <div class="col-sm-3">
-		<div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper ">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-        </div>
-		</div>
-		<div class="col-sm-3">
-		<div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper ">
-                    <span id="notes">None</span>
-                </div>
-                <br>
-            </div>
-        </div>
-		</div>
+    <div class="row open-position-container" id="open-position-container">
 	  <div class="col-sm-3">
 		<div class="card mb-3 target" id="card">
             <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
@@ -238,7 +159,84 @@
                 <br>
             </div>
         </div>
-		</div>-->
+		</div>
+	  <div class="col-sm-3">
+		<div class="card mb-3 target" id="card">
+            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse" id="collapseOne">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
+            </div>
+		</div>
+		</div>
+	  <div class="col-sm-3">
+		<div class="card mb-3 target" id="card">
+            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse" id="collapseOne">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
+            </div>
+        </div>
+		</div>
+		<div class="col-sm-3">
+		<div class="card mb-3 target" id="card">
+            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse" id="collapseOne">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
+            </div>
+        </div>
+		</div>
+<div class="col-sm-3">
+		<div class="card mb-3 target" id="card">
+            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse" id="collapseOne">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
+            </div>
+		</div>
+		</div>
+	  <div class="col-sm-3">
+		<div class="card mb-3 target" id="card">
+            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse" id="collapseOne">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
+            </div>
+        </div>
+		</div>
+		<div class="col-sm-3">
+		<div class="card mb-3 target" id="card">
+            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
+            <div class="card-body collapse" id="collapseOne">
+                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
+            </div>
+        </div>
 		</div>
     </div>
 
