--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
             </div>
 		</div>
 		</div>
-	  <div class="col-sm-3">
+	  <!--<div class="col-sm-3">
 		<div class="card mb-3 target" id="card">
             <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
             <div class="card-body collapse" id="collapseOne">
@@ -237,7 +237,7 @@
                 <br>
             </div>
         </div>
-		</div>
+		</div>-->
     </div>
 
     <!--Script added for bootstrap-->
