--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
     </div>
 
     <div class="row open-position-container" id="open-position-container">
-	  <div class="col-sm-3">
+	  <div class="col-sm-3" id="sample">
 		<div class="card mb-3 target" id="card">
             <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
             <div class="card-body collapse" id="collapseOne">
