--- a/src/admin.html
+++ b/src/admin.html
@@ -8,10 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style/css.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="script/admin/adminfilter.js"></script>
-    <script src="script/admin/adminwrite.js"></script>
-    <script type="module" src="script/admin/admindatabase.js"></script>
     <link rel="icon" href="assets/umkc-logo.png">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,6 +17,7 @@
 <body>
     <div class="page-logo">
         <img src="assets/umkc-logo1.png" class="img-login img-fluid" width="400px">
+		<button type="button" id="logout" class="btn btn-primary ">Logout</button>
         <h2 class=" mt-2 mb-3 title-position">Open Positions</h2>
     </div>
 
@@ -113,5 +110,11 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous">
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="script/admin/adminfilter.js"></script>
+    <script src="script/admin/adminwrite.js"></script>
+    <script type="module" src="script/admin/admindatabase.js"></script>
+	<script type="module" src="script/redirect.js"></script>
+	<script src="script/logout.js"></script>
 </body>
 </html>
