--- a/src/applicants.html
+++ b/src/applicants.html
@@ -6,22 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--Link added for bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="style/css.css">
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script src="script/applicants/applicantswrite.js"></script>
-  <script src="script/applicants/applicantsfilter.js"></script>
-  <script type="module" src="script/applicants/applicantsdatabase.js"></script>
+  <link rel="stylesheet" type="text/css" href="style/css.css">  
   <link rel="icon" href="assets/umkc-logo.png">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
-  <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
-  <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
   <style>
     body{
     background-color:#ebf2fa;
@@ -40,6 +30,7 @@
 <body>
         <div class="page-logo">
             <img src="assets/umkc-logo1.png" class="img-login img-fluid" width="400px">
+			<button type="button" id="logout" class="btn btn-primary ">Logout</button>
         </div>
     
         <div class="container applicants my-5" style="width:70%";>
@@ -129,5 +120,15 @@
             <a href="admin.html" class="mt-4 btn btn-primary "><i class="bi bi-arrow-left"></i></a>
 
 	</div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
+  <script src="script/applicants/applicantswrite.js"></script>
+  <script src="script/applicants/applicantsfilter.js"></script>
+  <script type="module" src="script/applicants/applicantsdatabase.js"></script>
+  <script type="module" src="script/redirect.js"></script>
+  <script src="script/logout.js"></script>
 </body>
 </html>
