--- a/src/login.html
+++ b/src/login.html
@@ -7,8 +7,6 @@
   <!--Link added for bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style/css.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script type="module" src="script/login/login.js"></script>
   <link rel="icon" href="assets/umkc-logo.png">
   <title>Login</title>
 </head>
@@ -73,6 +71,9 @@
 })()
 
  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script type="module" src="script/login/login.js"></script>
+  <script type="module" src="script/redirect.js"></script>
 </body>
 </html>
 
