--- a/src/studentform.html
+++ b/src/studentform.html
@@ -9,14 +9,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style/css.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script src="script/bootstrap/bootstrap.bundle.min.js"></script>
-  <script src="script/bootstrap/bootstrap-filestyle.min.js"> </script>
-  <script src="script/data.js"></script>
-  <script src="script/studentform/formiteration.js"></script>
-  <script src="script/studentform/formwrite.js"></script>
-  <script src="script/studentform/formsubmit.js"></script>
-  <script type="module" src="script/studentform/formdatabase.js"></script>
   <link rel="icon" href="assets/umkc-logo.png">
   <title>Application</title>
 </head>
@@ -24,6 +16,7 @@
 <body>
   <div class="page-logo">
     <img src="assets/umkc-logo1.png" class="img-login img-fluid" width="400px">
+	<button type="button" id="logout" class="btn btn-primary ">Logout</button>
   </div>
 
   <div class="position-container">
@@ -227,19 +220,21 @@
               <input type="submit" value="Submit" class="btn btn-primary mt-3">
             </form>
             <!-- Message Form was submitted successfully-->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel"
               aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Application</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <h5 class="modal-title" id="formModalLabel">Application</h5>
+                    <!--<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
                   </div>
                   <div class="modal-body">
                     Your form was successfully submitted!
                   </div>
                   <div class="modal-footer">
-                    <a href="login.html" class="btn btn-primary ">Close</i></a>
+				    <button type="button" class="btn btn-primary " data-bs-dismiss="modal">Go Back</button>
+                    <!--<a href="login.html" class="btn btn-primary ">Close</i></a>-->
+					<button type="button" id="logout" class="btn btn-primary ">Logout</button>
                   </div>
                 </div>
               </div>
@@ -293,5 +288,14 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="script/bootstrap/bootstrap.bundle.min.js"></script>
+  <script src="script/bootstrap/bootstrap-filestyle.min.js"> </script>
+  <script src="script/studentform/formiteration.js"></script>
+  <script src="script/studentform/formwrite.js"></script>
+  <script src="script/studentform/formsubmit.js"></script>
+  <script type="module" src="script/studentform/formdatabase.js"></script>
+  <script type="module" src="script/redirect.js"></script>
+  <script src="script/logout.js"></script>
 </body>
 </html>
