--- a/src/applicants.html
+++ b/src/applicants.html
@@ -128,7 +128,7 @@
   <script src="script/applicants/applicantswrite.js"></script>
   <script src="script/applicants/applicantsfilter.js"></script>
   <script type="module" src="script/applicants/applicantsdatabase.js"></script>
-  <script type="module" src="script/redirect.js"></script>
+  <!--<script type="module" src="script/redirect.js"></script>-->
   <script src="script/logout.js"></script>
 </body>
 </html>
