--- a/src/studentform.html
+++ b/src/studentform.html
@@ -295,7 +295,6 @@
   <script src="script/studentform/formwrite.js"></script>
   <script src="script/studentform/formsubmit.js"></script>
   <script type="module" src="script/studentform/formdatabase.js"></script>
-  <!--<script type="module" src="script/redirect.js"></script>-->
-  <script src="script/logout.js"></script>
+  <script src="script/redirect.js"></script>
 </body>
 </html>
