--- a/src/admin.html
+++ b/src/admin.html
@@ -114,7 +114,6 @@
     <script src="script/admin/adminfilter.js"></script>
     <script src="script/admin/adminwrite.js"></script>
     <script type="module" src="script/admin/admindatabase.js"></script>
-  <!--<script type="module" src="script/redirect.js"></script>-->
-	<script src="script/logout.js"></script>
+	<script src="script/redirect.js"></script>
 </body>
 </html>
