--- a/src/createposition.html
+++ b/src/createposition.html
@@ -162,7 +162,6 @@
   <script src="script/position/positionprocess.js"></script>
   <script src="script/position/positionsubmit.js"></script>
   <script type="module" src="script/position/positiondatabase.js"></script>
-  <!--<script type="module" src="script/redirect.js"></script>-->
-  <script src="script/logout.js"></script>
+  <script src="script/redirect.js"></script>
 </body>
 </html>
