Login page design

--- a/src/login.html
+++ b/src/login.html
@@ -11,12 +11,12 @@
   <title>Login</title>
 </head>
 
-<body>
+<body class="login-page">
     <div class="login-container">
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                <div class="card my-5">
-                    <form id="login" class="card-body cardbody-color p-lg-5 needs-validation" novalidate accept-charset="UTF-8" enctype="multipart/form-data" method="GET" onsubmit="">
+                <div class="card my-5 card-login">
+                    <form id="login" class="card-body cardbody-color p-lg-5 needs-validation login-card-body" novalidate accept-charset="UTF-8" enctype="multipart/form-data" method="GET" onsubmit="">
                         <h2 class="text-center mt-4">GTA Application Portal</h2>
                         
                         <div class="text-center">
@@ -42,7 +42,7 @@
                         <div class="error" id="loginerror"></div>
                         
                         <div class="text-center mt-3">
-                            <input type="submit" value="Login" class="btn btn-primary px-5 mb-5">
+                            <input type="submit" value="Login" class="btn btn-login px-5 mb-5">
                         </div>
                     </form>
                 </div>
